@@ -1,3 +1,8 @@
+2002-10-08  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* pylibs/xmlrpchandler.py (XMLRPCServer.handle_cgi): added support
+	for cgis, thereby justifying this module's presence in pylibs.
+
 2002-10-05  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* SkunkWeb/swcgi.py.in: swcgi was misbehaving due to not always
